# hussam-platform-v2

./: LICENSE  README.md  start_app_v2.sh
backend/: main.py  pyproject.toml
backend/alembic/versions/: 14eb48a69b23_auto_update.py  6d3af48e24eb_auto_update.py
backend/data_models/: accounts.json  ai_logs.json  ledger_entries.json  ledger_transactions.json  payment_verifications.json  products.json  shipments.json  tenant_settings.json  tenants.json
backend/mock_data/: accounts.json  ai_logs.json  ledger_entries.json  ledger_transactions.json  payment_verifications.json  products.json  shipments.json  tenant_settings.json  tenants.json
backend/models/: accounts.py  ai_logs.py  ledger_entries.py  ledger_transactions.py  payment_verifications.py  products.py  shipments.py  tenant_settings.py  tenants.py
backend/routers/: accounts.py  ai_logs.py  compiler.py  dashboard.py  ledger.py  ledger_entries.py  ledger_transactions.py  logistics.py  marketplace.py  payment_verifications.py  payments_gateway.py  products.py  shipments.py  tenant_settings.py  tenants.py
backend/services/: accounts.py  ai_logs.py  compiler_service.py  dashboard_service.py  ledger_entries.py  ledger_service.py  ledger_transactions.py  logistics_service.py  marketplace_service.py  payment_verification_service.py  payment_verifications.py  products.py  shipments.py  tenant_settings.py  tenants.py
docs/: ARCHITECTURE_AUDIT_V3.md  ARCHITECTURE_DECISION_RECORD_V3.md  PHASE_1_DOMAIN_MIGRATION_MAP.md  PUBLIC_LAUNCH_READINESS_GOVERNANCE_V1.md  SYSTEM_BASELINE_INVENTORY_V3.md  ci_workflow_example.yml
(+13 files in other folders)
